--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <script src="js/clocks.js"></script>
     </head>
     <body>
-    
-        <h1>Salut, je suis un titre</h1>
-        <p>Ciao, je suis un paragraphe</p>
 
-        <time class="temps" id="horloge">00:00:00</time>
-    
+			<time class="temps" id="heure">00:00:00</time>
+			<time class="temps" id="minute">00:00:00</time>
+      <time class="temps" id="seconde">00:00:00</time>
+
+
     </body>
 </html>
